Fix bad font visibility

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -127,7 +127,7 @@ li {
 nav {
   li {
     @extend .ff-prominent;
-    font-weight: lighter;
+    font-weight: light;
     line-height: 1.75;
   }
 
